window: Compare currentTile to requestedTile

On scaled displays, the previous geometry comparisons got
rounded differently (or not rounded at all), and thus did not match
1-to-1. This caused the tiling to always get the first position,
instead of moving to next one.

This patch just compares the currentTile to previously requestedTile.
If none is found, we request a new tile.

BUG:500666